# breedbase-image-analysis-module

./: .dockerignore  .gitignore  .gitignore.swp  API_Standardization_Tracker.md  CITATION.cff  CONTRIBUTING.md  Conformance_Test_Kit_Plan.md  Dockerfile  LICENSE  LICENSE.md  README.md  cli.py  docker-compose.yml  docker_compose.yml  process_image.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
api/: app.py
api/config/: openapi.yml
config/: openapi.yml
conformance/: __init__.py  conformance_README.md  envelope.schema.json  validate.py
docs/: Subtask_3-5_Change_Log.md
docs/img/: architecture.tiff  example_overlay.tiff
pipelines/: color_correction.py  color_correction_v2.py  create_chip_mask_v3.py  image_math.py  object_labeling.py  ref_mask.py  seed_mask.py  shape_analysis.py  size_marker_metadata.py  utils.py
results/: minicore_seed_0002_Seed_picture_2025-08-12_14_05_37.008-04_00_435c66c2-90e7-439a-9b0c-2a66c0c7b050_metadata_4e13e5ee-c595-4277-ae68-6fa9a0b7d66b.json  minicore_seed_0002_Seed_picture_2025-08-12_14_05_37.008-04_00_5993675a-af99-4d1f-912c-a72cd194baa3_metadata_056577cd-0369-42e5-b61f-49567311f095.json  minicore_seed_0002_Seed_picture_2025-08-12_14_05_37.008-04_00_793d2c37-0f20-48f8-8a5c-71278e9fdd5f_metadata_a9959f51-a6e0-40ac-b5ac-a7670e939b73.json  minicore_seed_0002_Seed_picture_2025-08-12_14_05_37.008-04_00_8377724d-346d-4691-9b7b-f732a976db60_metadata_52c3d2e5-2873-4266-bccb-d5669adbd1d6.json  minicore_seed_0002_Seed_picture_2025-08-12_14_05_37.008-04_00_d4f5c5fc-900e-4d92-9075-016f04133802_metadata_e84e6394-73e4-4879-befe-7d4474644090.json  minicore_seed_0002_Seed_picture_2025-08-12_14_05_37.008-04_00_metadata_4e725c9a-e407-4e86-a4e5-5a57ecdfca54.json  minicore_seed_0002_Seed_picture_2025-08-12_14_05_37.008-04_00_metadata_6c45c704-7280-4979-9dc8-bc87cf138fe7.json  minicore_seed_0002_Seed_picture_2025-08-12_14_05_37.008-04_00_metadata_c9984c0d-c014-4663-81a1-7dfaaaaa86aa.json
tests/: conftest.py  generate_golden.py  test_api.py  test_conformance.py  test_envelope_schema.py  test_process_image.py  test_schema_matches_openapi.py
tests/fixtures/: expected_output.json  invalid_bad_traitkey.json  invalid_missing_qc.json  invalid_missing_valuekey.json  invalid_passed_but_empty.json  invalid_wrong_schema_version.json  valid_contour_failure.json  valid_extra_fields.json  valid_failed_analysis.json  valid_minimal.json  valid_null_unit.json  valid_pipeline_output_raw.json
