[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breedbase-image-analysis"
version = "0.1.0"
description = "Automated image analysis pipeline for BreedBase"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
api = [
    "connexion[flask,uvicorn]>=3.0.0",
    "flask>=2.3",
    "werkzeug>=2.3",
    "gunicorn>=21.0",
]
dev = [
    "pytest>=7",
    "jsonschema>=4.18",
]

[project.scripts]
bb-analyze = "cli:main"

[tool.setuptools]
py-modules = ["process_image", "cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipelines*", "api*"]
